@@ -1,4 +1,8 @@
-﻿shmuel 31.10.2015 19:33:22 +0200 - build 540
+﻿shmuel 31.10.2015 22:34:42 +0200 - build 541
+
+1. Уточнение 540.
+
+shmuel 31.10.2015 19:33:22 +0200 - build 540
 
 1. Добавлен новый вид события: group="MacrosLoaded". Обработчики вызываются по завершению загрузки макрофайлов.
 
